
2013-10-04  Carsten Haitzler (The Rasterman)

        * Break popup theme - it was poorly namespaced, unable to
        handle styles at all (so styles were broken with the given
        namespace).

2013-10-08  Daesung Kim (ad960009)

        * ctxpopup : fix elm_object_content_unset didn't unpack content from box

2013-10-10  ChunEon Park (Hermet)

        * scroller : fix the scroller to locate the current page correctly
        in case that the scroller is suddenly resized and then the drag
        couldn't capture the page location.

2013-10-12  Ryuan Choi (ryuan)

        * popup : Change the behavior about adding or removing buttons to keep the
        user defined position of button.

2013-10-14  Daniel Juyung Seo (SeoZ)

        * hoversel: Support elm_object_item_signal_emit in hoversel. This works
        only when the item is created.

2013-10-17  Ryuan Choi (ryuan)

        * fileselector : Add support multi-selection.

2013-10-17  Carsten Haitzler (The Rasterman)

        * Default theme is now dark.

2013-10-18  Ryuan Choi (ryuan)

        * fileselector : Add support visibility control of hidden files/directories.

2013-10-21  Ryuan Choi (ryuan)

        * fileselector : Monitor and update changes of selected path automatically while EIO is working.

2013-10-22  Amitesh Singh (_ami_)

        * slider : Show popup on left/right/up/down key down press and hide on left/right/up/down key up press.

2013-10-23  Christophe Sadoine

        * spinner: added signals "spinner,drag,start" and "spinner,drag,stop".

2013-10-30  Amitesh Singh (_ami_)

        * image: Add support for "clicked" callback on Return/space/KP_Enter key press.

2013-10-30  Shilpa Onkar Singh

        * slider: Added elm_slider_step_get(), elm_slider_step_set().

2013-11-03  Daniel Juyung Seo (SeoZ)

        * Genlist/Gengrid/List: Added multi select mode.

2013-11-07  ChunEon Park (Hermet)

        * scroller: don't focus region show if the scroller is disabled.